fix: ajuste layout.

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
-NAME_PASTA=/cooper-teste
-DB_HOST=localhost
+
+APP_NAME='Sistemas de Apostas & Cartelas'
+NAME_PASTA=/sistema-sorteio-cartela
+
+DB_HOST=
 DB_DATABASE=sorteio
-DB_USUARIO=root
+DB_USUARIO=
 DB_PORT=3306
 DB_SENHA=
